--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "expo": {
-    "name": "expo-native",
-    "slug": "expo-native",
+    "name": "Alpha-app",
+    "slug": "alpha-app",
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "backgroundColor": "#113ed4",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
