Update app configuration by specifying Android package and adding EAS build settings

--- a/app.json
+++ b/app.json
@@ -2,7 +2,9 @@
   "expo": {
     "name": "Alpha-app",
     "slug": "alpha-app",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,16 +17,23 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.alphaapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.alphaapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "be29ea5a-072e-424c-b551-b512f02f2e3d"
+      }
     }
   }
 }
